--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="application-container">
-                <form id="driverLicenseForm" name="driver-license-upload" method="POST" data-netlify="true" enctype="multipart/form-data" action="/upload-success">
+                <form id="driverLicenseForm" name="driver-license-upload" method="POST" data-netlify="true" enctype="multipart/form-data" action="upload-success.html">
                     <div class="form-group">
                         <h3>Driver's License Upload</h3>
                         <p>Please upload clear photos of both sides of your driver's license for identity verification.</p>
