--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="application-container">
-                <form id="cashAdvanceForm" name="loan-application" method="POST" data-netlify="true" enctype="multipart/form-data" action="/success?form=loan-application">
+                <form id="cashAdvanceForm" name="loan-application" method="POST" data-netlify="true" enctype="multipart/form-data" action="/success-loan.html">
                     <input type="hidden" name="form-name" value="loan-application" />
                     <div class="form-group">
                         <h3>Loan Information</h3>
